--- a/src/scss/components/hero-banner/_navigation-white.scss
+++ b/src/scss/components/hero-banner/_navigation-white.scss
@@ -21,7 +21,7 @@
   }
 
   .su-multi-menu {
-    @include grid-media-min('lg') {
+    @include grid-media-min('xl') {
       background: $vpue-gradient-sea-to-sage;
       background-repeat: repeat-x;
       background-size: 100% 0.15em;
